Fixed the code that extracts dependencies from .../guestfs/supermin.d/packages-* lists. This should also take care of the iproute legacy package. (Closes: #752017)

--- a/debian/rules
+++ b/debian/rules
@@ -15,6 +15,9 @@ BUILDS         := $(filter-out $(PYTHON_DEFAULT), $(PYTHONS)) \
 		  $(filter-out $(LUA_DEFAULT), $(LUAS)) \
 		  default
 
+pkglist_to_deps := sed -e 's,iproute2\?,iproute2|iproute,;s,\(gfs-tools\|gfs2-tools\|gfs2-utils\),gfs2-utils|gfs2-tools|gfs-tools,'
+essential_deps  := grep -v '^\(bash\|coreutils\|e2fsprogs\|findutils\|grep\|gzip\|sed\|sysvinit\|tar\|util\-linux\)'
+
 QEMU_CPU := $(shell echo $(DEB_HOST_GNU_CPU) \
 		    | sed -e 's,i[456]86,i386,;s,sparc,sparc64,;s,powerpc,ppc64,;s,arm.*,arm,')
 
@@ -116,9 +119,9 @@ override_dh_install:
 # main libguestfs0 can avoid depending on everything.
 	cd $(CURDIR)/debian/tmp/usr/lib/*-*/guestfs/supermin.d && \
 	cp -n packages packages.orig; \
-	for f in gfs2 hfsplus jfs nilfs reiserfs rsync xfs zfs; do \
-	    sed -i -e "/$$f/d" packages; \
-	    grep -F  "$$f" < packages.orig > packages-$$f; \
+	for p in gfs2 hfsplus jfs nilfs reiserfs rsync xfs zfs; do \
+	    sed -i -e "/$$p/d" packages; \
+	    grep -F  "$$p" < packages.orig > packages-$$p; \
 	done ; \
 	sed -i -e "/^\(iputils\|lsof\|openssh-server\|strace\|vim\)/d" packages; \
 	grep "^\(iputils\|lsof\|openssh-server\|strace\|vim\)" \
@@ -131,15 +134,20 @@ override_dh_install:
 
 # Add packages (except essential packages) from appliance packagelist
 # to libguestfs0 dependencies
-	for p in libguestfs0 \
-	    $(patsubst %,libguestfs-%,gfs2 hfsplus jfs nilfs reiserfs rescue rsync xfs zfs); \
+	for p in gfs2 hfsplus jfs nilfs reiserfs rescue rsync xfs zfs; \
 	do \
-	    echo "appliance for $$p..."; \
-	    echo -n 'appliance:Depends=' >> debian/$$p.substvars; \
-	    cat debian/$$p/usr/lib/*-*/guestfs/supermin.d/*packages* | \
-	    grep -v '^\(bash\|coreutils\|e2fsprogs\|findutils\|grep\|gzip\|iproute\|sed\|sysvinit\|tar\|util\-linux\)' | \
-		tr '\n' ',' >> debian/$$p.substvars; \
+	    echo -n 'appliance:Depends=' >> debian/libguestfs-$$p.substvars; \
+	    cat debian/libguestfs-$$p/usr/lib/*-*/guestfs/supermin.d/packages-$$p | \
+	    $(pkglist_to_deps) | \
+	    $(essential_deps) | \
+	    tr '\n' ',' >> debian/libguestfs-$$p.substvars; \
 	done
+
+	echo -n 'appliance:Depends=' >> debian/libguestfs0.substvars
+	cat debian/libguestfs0/usr/lib/*-*/guestfs/supermin.d/packages | \
+	$(pkglist_to_deps) | \
+	$(essential_deps) | \
+	tr '\n' ',' >> debian/libguestfs0.substvars; \
 
 override_dh_python3:
 	dh_python3 -p python3-guestfs
