--- a/debian/control
+++ b/debian/control
@@ -64,7 +64,7 @@ Build-Depends: debhelper (>= 9),
 # gfs-tools,
   grub2 [i386 amd64 powerpc sparc],
   hfsplus,
-  iproute,
+  iproute2 | iproute,
   jfsutils,
   kmod,
   less,
@@ -113,7 +113,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
   bsdmainutils,
   diffutils,
 # grub-pc,
-  iproute,
+  iproute2 | iproute,
   libaugeas0,
   udev,
   binutils,
