Fix module-init-tools build-dependency

--- a/debian/control
+++ b/debian/control
@@ -80,7 +80,7 @@ Build-Depends: debhelper (>= 9),
   lvm2,
   lzop,
   mdadm,
-  module-init-tools,
+  kmod | module-init-tools,
   mtools,
   nilfs-tools,
   ntfs-3g,
