Added architecture-specific dependencies for arm64, ppc64el

--- a/debian/control
+++ b/debian/control
@@ -41,9 +41,11 @@ Build-Depends: debhelper (>= 9),
 # for appliance
   linux-image-versatile [armel],
   linux-image-armmp [armhf],
+  linux-image-arm64 [arm64],
   linux-image-4kc-malta [mips mipsel] | linux-image-5kc-malta [mips mipsel],
   linux-image-s390x [s390x],
   linux-image-powerpc64 [powerpc],
+  linux-image-powerpc64le [ppc64el],
   linux-image-sparc64 [sparc],
   linux-image-amd64 [amd64], linux-image-486 [i386] | linux-image-686-pae [i386],
   acl,
