--- a/debian/control
+++ b/debian/control
@@ -33,6 +33,7 @@ Build-Depends: debhelper (>= 9),
   libsys-virt-perl, libwin-hivex-perl,
   libfuse-dev, fuse,
   libglib2.0-dev, gjs, gobject-introspection, libgirepository1.0-dev, gtk-doc-tools,
+  libgtk2.0-dev,
   netpbm, icoutils,
   po4a,
   curl,
