Added more architecture-specific dependencies for ppc64el

--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends: debhelper (>= 9),
   qemu-system-arm [armel armhf],
   qemu-system-mips [mips mipsel],
   qemu-system-misc [s390x],
-  qemu-system-ppc [powerpc],
+  qemu-system-ppc [powerpc ppc64el],
   qemu-system-sparc [sparc],
   qemu-system-x86 [i386 amd64],
   qemu-utils,
