Moved build dependency from libsystemd-<specific>-dev to libsystemd-dev, removed build dependencies on specific libsystemd library packages. (Closes: #763710, #763741)

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,8 @@ Build-Depends: debhelper (>= 9),
   liblzma-dev, libmagic-dev, libncurses5-dev, libpcre3-dev, libxml2-dev,
   libconfig-dev, libc-dev-bin,
   systemtap-sdt-dev [amd64 armel armhf i386 powerpc],
-  libcap-dev, libacl1-dev, libyajl-dev, libsystemd-journal-dev,
+  libcap-dev, libacl1-dev, libyajl-dev,
+  libsystemd-dev | libsystemd-journal-dev,
   automake, autoconf, libtool,
   gperf, libxml2-utils,
   qemu-system-arm [armel armhf],
@@ -75,7 +76,6 @@ Build-Depends: debhelper (>= 9),
   libcap2,
   libhivex0,
   libpcre3,
-  libsystemd-id128-0, libsystemd-journal0,
   libxml2,
   libyajl2,
   lsof,
