Fixed guestfsd dependencies, stripped unnecessary build-dependencies

--- a/debian/control
+++ b/debian/control
@@ -72,12 +72,6 @@ Build-Depends: debhelper (>= 9),
   jfsutils,
   kmod | module-init-tools,
   less,
-  libaugeas0,
-  libcap2,
-  libhivex0,
-  libpcre3,
-  libxml2,
-  libyajl2,
   lsof,
   lsscsi,
   lvm2,
@@ -116,13 +110,12 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
   diffutils,
 # grub-pc,
   iproute2 | iproute,
-  libaugeas0,
   udev,
   binutils,
   cpio,
   dosfstools,
   file,
-  kmod,
+  kmod | module-init-tools,
   lsof,
   net-tools,
   parted,
