Added mips64, mips64el

--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Build-Depends: debhelper (>= 9),
   automake, autoconf, libtool,
   gperf, libxml2-utils,
   qemu-system-arm [armel armhf],
-  qemu-system-mips [mips mipsel],
+  qemu-system-mips [mips mipsel mips64 mips64el],
   qemu-system-misc [s390x],
   qemu-system-ppc [powerpc ppc64el],
   qemu-system-sparc [sparc],
@@ -44,7 +44,7 @@ Build-Depends: debhelper (>= 9),
   linux-image-versatile [armel],
   linux-image-armmp [armhf],
   linux-image-arm64 [arm64],
-  linux-image-4kc-malta [mips mipsel] | linux-image-5kc-malta [mips mipsel],
+  linux-image-4kc-malta [mips mipsel] | linux-image-5kc-malta [mips mipsel mips64 mips64el],
   linux-image-s390x [s390x],
   linux-image-powerpc64 [powerpc],
   linux-image-powerpc64le [ppc64el],
@@ -151,7 +151,7 @@ Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
   supermin (>= 5),
   qemu-system-arm [armel armhf],
-  qemu-system-mips [mips mipsel],
+  qemu-system-mips [mips mipsel mips64 mips64el],
   qemu-system-misc [s390x],
   qemu-system-ppc [powerpc],
   qemu-system-sparc [sparc],
