Added linux-image-586 to Build-Dependencies as linux-image-486 has been removed from unstable

--- a/debian/control
+++ b/debian/control
@@ -49,7 +49,8 @@ Build-Depends: debhelper (>= 9),
   linux-image-powerpc64 [powerpc],
   linux-image-powerpc64le [ppc64el],
   linux-image-sparc64 [sparc],
-  linux-image-amd64 [amd64], linux-image-486 [i386] | linux-image-686-pae [i386],
+  linux-image-amd64 [amd64],
+  linux-image-586 [i386] | linux-image-486 [i386] | linux-image-686-pae [i386],
   acl,
   attr,
   binutils,
