Adjust architecture list for some dependencies (Closes: #799965)

--- a/debian/control
+++ b/debian/control
@@ -10,12 +10,12 @@ Build-Depends: debhelper (>= 9),
   libreadline-dev, libaugeas-dev (>= 1.0.0), libselinux1-dev, libhivex-dev, libvirt-dev,
   liblzma-dev, libmagic-dev, libncurses5-dev, libncursesw5-dev, libpcre3-dev, libxml2-dev,
   libconfig-dev, libc-dev-bin,
-  systemtap-sdt-dev [amd64 armel armhf i386 powerpc],
+  systemtap-sdt-dev [amd64 armel armhf arm64 i386 powerpc],
   libcap-dev, libacl1-dev, libyajl-dev,
   libsystemd-dev | libsystemd-journal-dev,
   automake, autoconf, libtool,
   gperf, libxml2-utils,
-  qemu-system-arm [armel armhf],
+  qemu-system-arm [armel armhf arm64],
   qemu-system-mips [mips mipsel mips64 mips64el],
   qemu-system-misc [s390x],
   qemu-system-ppc [powerpc ppc64el],
@@ -39,7 +39,7 @@ Build-Depends: debhelper (>= 9),
   po4a,
   curl,
   flex, bison,
-  golang-go [i386 amd64 armel armhf],
+  golang-go [i386 amd64 armel armhf arm64 ppc64el],
 # for appliance
   linux-image-versatile [armel],
   linux-image-armmp [armhf],
@@ -67,7 +67,7 @@ Build-Depends: debhelper (>= 9),
   genisoimage,
   gfs2-utils,
 # gfs-tools,
-  grub2 [i386 amd64 powerpc sparc],
+  grub2 [i386 amd64 powerpc ppc64el sparc],
   hfsplus,
   iproute2 | iproute,
   iputils-arping,
@@ -156,10 +156,10 @@ Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
   supermin (>= 5),
-  qemu-system-arm [armel armhf],
+  qemu-system-arm [armel armhf arm64],
   qemu-system-mips [mips mipsel mips64 mips64el],
   qemu-system-misc [s390x],
-  qemu-system-ppc [powerpc],
+  qemu-system-ppc [powerpc ppc64el],
   qemu-system-sparc [sparc],
   qemu-system-x86 [i386 amd64],
   ${appliance:Depends},
