--- a/debian/control
+++ b/debian/control
@@ -29,6 +29,7 @@ Build-Depends: debhelper (>= 9),
   python (>= 2.6.6-3~), python-all-dev (>= 2.6.6-3~), python3-all-dev,
   default-jdk,
   gem2deb, rake, libjs-jquery,
+  libmodule-build-perl,
   libtest-pod-coverage-perl, libextutils-command-perl, libintl-perl, libtest-pod-perl,
   libstring-shellquote-perl,
   libsys-virt-perl, libwin-hivex-perl,
