Work around cryptsetup's missing busybox dependency

--- a/debian/control
+++ b/debian/control
@@ -59,7 +59,7 @@ Build-Depends: debhelper (>= 9),
   btrfs-tools,
   bzip2,
   cpio,
-  cryptsetup,
+  cryptsetup, busybox,
   dosfstools,
   extlinux [i386 amd64],
   file,
