--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,7 @@ Build-Depends: debhelper (>= 9),
   qemu-system-arm [armel armhf arm64],
   qemu-system-mips [mips mipsel mips64 mips64el],
   qemu-system-misc [s390x],
-  qemu-system-ppc [powerpc ppc64el],
+  qemu-system-ppc [powerpc ppc64 ppc64el],
   qemu-system-sparc [sparc],
   qemu-system-x86 [i386 amd64],
   qemu-utils,
@@ -47,7 +47,7 @@ Build-Depends: debhelper (>= 9),
   linux-image-arm64 [arm64],
   linux-image-4kc-malta [mips mipsel] | linux-image-5kc-malta [mips mipsel mips64 mips64el],
   linux-image-s390x [s390x],
-  linux-image-powerpc64 [powerpc],
+  linux-image-powerpc64 [powerpc ppc64],
   linux-image-powerpc64le [ppc64el],
   linux-image-sparc64 [sparc],
   linux-image-amd64 [amd64],
@@ -160,7 +160,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
   qemu-system-arm [armel armhf arm64],
   qemu-system-mips [mips mipsel mips64 mips64el],
   qemu-system-misc [s390x],
-  qemu-system-ppc [powerpc ppc64el],
+  qemu-system-ppc [powerpc ppc64 ppc64el],
   qemu-system-sparc [sparc],
   qemu-system-x86 [i386 amd64],
   ${appliance:Depends},
